Fix layout issue
- removed routes
- creating 1 static website and pages in the same page
- profile + stage for different pages

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,23 +9,21 @@
     color: white;
 }
 
-html {
+html, body {
     height: 100%;
-    color: white;
-}
-
-body {
-    height: 100%;
-    color: white;
 }
 
 #tsparticles {
     position: absolute;
-    z-index: -1
+    z-index: -10
 }
 
 .motto {
     font-family: 'Libre Baskerville', serif;
+}
+
+.trans {
+    z-index:-9;
 }
 
 .half {
